# unaula-IF0100-POO-II

./: .claudeignore  .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GUIA-DOCENTE.md  INFORME-ENRIQUECIMIENTO-CURSO.md  README.md  SUPERVISION.md  clase-01.html  clase-02.html  clase-03.html  clase-04.html  clase-05.html  clase-06.html  clase-07.html  clase-08.html  clase-09.html  clase-10.html  clase-11.html  clase-12.html  clase-13.html  clase-14.html  clase-15.html  clase-16.html  clase-17.html  concertacion.html  coverage.json  cronograma.html  glosario.html  index.html  presentacion-docente.html  pyproject.toml  pytest.ini  requirements.txt  rubricas.html
.git.backup/: config  index
.serena/: project.yml
assets/: recursos-multimedia.md
clases-html/: _audit.md  _progress.md  clase-01.html  clase-02.html  clase-03.html  clase-04.html  clase-05.html  clase-06.html  clase-07.html  clase-08.html  clase-09-working.html  clase-09.html  clase-10.html  clase-11-temp.html  clase-11.html  clase-12.html  clase-13.html  clase-14.html  clase-15.html  clase-16.html  clase-17.html  concertacion.html  cronograma.html  glosario.html  index.html  presentacion-docente.html
clases-html-old/: clase-01.html  clase-02.html  clase-03.html  clase-04.html  clase-05.html  clase-06.html  clase-10.html  clase-12.html  clase-16.html  index.html
coord/: AGENTS.md  CLASS_STATUS.md  ESTRUCTURA_NUEVA.md  PLAN_TRABAJO.md  REPORTE_INICIAL_COORDINADOR.md  RESUMEN_FASE1_COMPLETADA.md  REVIEW_CHECKLIST.md  STACK.md  STATUS.md  SWARM_INSTRUCTIONS.md  WORK_INSTRUCTIONS.md  apply_syntax_highlight.py
database/: README.md  schema.sql
docs/: ANALISIS-CURSO.md  PLAN-CORRECCIONES.md  REPORTE_FINAL.md  api.md  arquitectura.md  checklist-revision.md  compromisos-docentes-2026-1.md  cronograma-corregido-2026-1-tuesday.md  cronograma.md  fix-documentacion.md  fix-frontend.md  fix-html.md  fix-tests.md  instalacion.md  qa-metrics.json  reporte-correcciones-index.html.md  reporte-qa-documentacion.md  reporte-qa-html.md  reporte-qa-tests.md  reporte-revision-2026-1.md  reporte-verificacion-index.html.md  rubricas.md
evaluaciones/: evaluacion-01-dominio.html  evaluacion-02-tecnicas-desarrollo.md  evaluacion-02-testing.html  evaluacion-03-desarrollo-web.md  evaluacion-03-web.html  evaluacion-04-archivos.html  evaluacion-04-persistencia-sqlalchemy.md  evaluacion-05-crud-fastapi.md  evaluacion-05-sql.html  evaluacion-06-final.html  index.html
juego-kaboom/: README.md  index.html  questions.json
memory-bank/: activeContext.md
planificacion/: cronograma.md  distribucion-teoria-practica.md  guias-taller.md  objetivos-por-clase.md  progresion-tecnica.md  rubricas.md  syllabus.md
proyecto/: README.md  requirements.txt  sprint-1-setup.md  sprint-2-api.md  sprint-3-testing.md  sprint-4-finalizacion.md
scripts/: create_bdd_notebook.py  fix_remaining_chars.sh  integrate_multimedia.py  validate_coherence.py
tests/: conftest.py  test_api.py  test_filters.py  test_models.py  test_services.py
unidad-00/: clase-00-introduccion.html  clase-01-estructuras-control.html  clase-01-variables-tipos.html  clase-02-estructuras-datos.html  clase-03-estructuras-datos.html
unidad-01/: clase-01-clases-objetos.html  clase-02-encapsulamiento.html  clase-03-herencia-polimorfismo.html  clase-04-clases-abstractas.html
(+303 files in other folders)
